Correction bugs font-family: Merriweather family=Montserrat, sans-serif

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body{
 	margin-right: 15px;
 	text-decoration: none;
 	color: #fff;
-	font-family: Merriweather&family=Montserrat, sans-serif;
+	font-family: Merriweather family=Montserrat, sans-serif;
 	font-size: 20px;
 	border-radius: 10px;
 	border-bottom: 1px solid #fff;
@@ -53,7 +53,7 @@ body{
 	padding: .5rem 1rem;
 	text-decoration: none;
 	color: #fff;
-	font-family: Merriweather&family=Montserrat, sans-serif;
+	font-family: Merriweather family=Montserrat, sans-serif;
 	font-size: 15px;
 	float: right;
 	background: #FF7B07;
