--- a/style.css
+++ b/style.css
@@ -30,8 +30,8 @@ body{
 }
 
 .myNav.sticky {
-	background: #fff;
-	padding: 10px 100px;
+	background: #bdc3c7;
+	padding: 10px 60px;
 	box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
 }
 
